stack/wallabag/service-wallabag.yaml
kind: Service
apiVersion: v1
metadata:
  name: wallabag
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
      app: wallabag
