stack/wallabag/ingress-wallabag.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wallabag
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: issuer-cert-manager-production
    certmanager.k8s.io/cluster-issuer: issuer-cert-manager-production
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - read.dfl.mn
    secretName: cert-wallabag
  rules:
  - host: read.dfl.mn
    http:
      paths:
      - path: /
        backend:
          serviceName: wallabag
          servicePort: 80
